camrab webage II

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                             <li><a class="smooth-scroll" href="#team">Team</a></li>
 
-                            <li><a class="smooth-scroll" href="#partners">Partners</a></li>
+                            <li><a class="smooth-scroll" href="#gallery">Gallery</a></li>
                             <li><a class="smooth-scroll" href="#contact">Contact</a></li>
                         </ul>
 
@@ -385,18 +385,7 @@
                     <div class="row wow animated bounceInDown" data-wow-duration="1s" data-wow-delay=".5s">
                         <div class="col-md-12">
                             <div id="customers-testimonials" class="text-center owl-carousel owl-theme">
-                                <div class="testimonial">
-                                    <img src="img/drT.jpg" class="img-responsive img-circle" alt="testimonial">
-                                    <blockquote class="text-center">
-                                        <p>She is a board-certified Obstetrician Gynecologist, Fellow of the West Africa College of Surgeons, and the National Postgraduate Medical College of Nigeria. She holds a WHO/TDR Clinical Research and Development Fellowship, and is an EDCTP Career Development Fellow, conducting research on parasite resistance to Malaria chemoprophylaxis in Pregnancy. <br>Her research interests include the perinatal transmission of infectious diseases, and the active surveillance of drug/vaccine safety in pregnancy. Dr Olaleye is a Senior Lecturer and Consultant Obstetrician Gynecologist at the Babcock University and Teaching Hospital, Ogun state, Nigeria. She is also director of the institution’s Centre for Advanced Medical Research and Biotechnology (CAMRAB).</p>
-                                    </blockquote>
-                                    <div class="testimonial-author">
-                                        <p>
-                                            <strong>Dr. Atinuke Olalaye</strong>
-                                            <!--<span>CEO & Founder - Rafmak</span>-->
-                                        </p>
-                                    </div>
-                                </div>
+
                                 <div class="testimonial">
                                     <img src="img/drW.jpg" class="img-responsive img-circle" alt="testimonial">
                                     <blockquote class="text-center">
@@ -408,6 +397,18 @@
                                         <p>
                                             <strong>Professor Oladapo Walker </strong>
                                             <!--<span>CEO & Founder - The(#)Tag</span>-->
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="testimonial">
+                                    <img src="img/drT.jpg" class="img-responsive img-circle" alt="testimonial">
+                                    <blockquote class="text-center">
+                                        <p>She is a board-certified Obstetrician Gynecologist, Fellow of the West Africa College of Surgeons, and the National Postgraduate Medical College of Nigeria. She holds a WHO/TDR Clinical Research and Development Fellowship, and is an EDCTP Career Development Fellow, conducting research on parasite resistance to Malaria chemoprophylaxis in Pregnancy. <br>Her research interests include the perinatal transmission of infectious diseases, and the active surveillance of drug/vaccine safety in pregnancy. Dr Olaleye is a Senior Lecturer and Consultant Obstetrician Gynecologist at the Babcock University and Teaching Hospital, Ogun state, Nigeria. She is also director of the institution’s Centre for Advanced Medical Research and Biotechnology (CAMRAB).</p>
+                                    </blockquote>
+                                    <div class="testimonial-author">
+                                        <p>
+                                            <strong>Dr. Atinuke Olalaye</strong>
+                                            <!--<span>CEO & Founder - Rafmak</span>-->
                                         </p>
                                     </div>
                                 </div>
@@ -434,8 +435,25 @@
     </section>
 
 
+    <!--    Gallery -->
+    <section id="gallery">
+        <div class="content-box">
+            <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                <h3>GALLERY</h3>
+                <div class="content-title-underline"></div>
+            </div>
+        </div>
 
 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <p style="text-align: center; margin-bottom: 50px; font-size: 25px; ">Click <a href="gallery.html">here</a> for pictures</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 
 
@@ -443,7 +461,7 @@
 
 
     <!-- Partners -->
-    <section id="partners">
+    <!--<section id="partners">
         <div class="content-box">
             <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
                 <h3>Partners</h3>
@@ -464,11 +482,11 @@
                         <!--<div class="client">
                             <img src="img/sp2.jpg" class="img-responsive" alt="client">
                         </div>-->
-                        <!-- <div class="partner">
+    <!-- <div class="partner">
                             <p style="font-size: 40px; font-weight: 700; text-align: center;">KATCHEY</p>
                             <!--<img src="img/ps2.jpg" class="img-responsive" alt="client">
                         </div>-->
-                        <!--<div class="client">
+    <!--<div class="client">
                             <img src="img/ps2.png" class="img-responsive" alt="client">
                         </div>
                         <div class="client">
@@ -488,14 +506,23 @@
                         </div>
                         <div class="client">
                             <img src="img/sp7.png" class="img-responsive" alt="client">
-                        </div>-->
+                        </div>
                     </div>
 
                 </div>
             </div>
 
         </div>
-    </section>
+    </section>-->
+
+
+
+
+
+
+
+
+
 
     <!-- footer -->
     <footer>
@@ -521,9 +548,9 @@
                                 <div id="phone-fax-email">
 
                                     <p>
-                                        <strong>Phone: </strong><span>(234) 816 579 9094</span><br>
+                                        <strong>Phone: </strong><span>(234) 803 351 1909</span><br>
 
-                                        <strong>Email: </strong><span>atinukeoa@babcock.edu.ng</span> <br>
+                                        <strong>Email: </strong><span>olaleyea@babcock.edu.ng</span> <br>
 
                                     </p>
 
@@ -581,7 +608,7 @@
                             <ul>
                                 <li><a class="smooth-scroll" href="#home">Home</a>/</li>
                                 <li><a class="smooth-scroll" href="#about">About</a>/</li>
-<!--                                <li><a class="smooth-scroll" href="#workshop">Workshop</a>/</li>-->
+                                <!--                                <li><a class="smooth-scroll" href="#workshop">Workshop</a>/</li>-->
                                 <li><a class="smooth-scroll" href="#team">Team</a>/</li>
                             </ul>
                         </div>
