newest and latest

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p style="text-align: center; margin-bottom: 50px; font-size: 25px; ">Click <a href="gallery.html">here</a> for pictures</p>
+                    <p style="text-align: center; margin-bottom: 50px; font-size: 25px; ">Click <a href="https://drive.google.com/drive/u/1/mobile/folders/190bDFb-hG6qSjNao-OD0L20E9Jbco_a-/1ofmrQVaF44lYz8TFs6W2V3noEahp2_jn?sort=15&direction=d">here</a> for pictures</p>
                 </div>
             </div>
         </div>
